--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.12.0",
+    "apollo-server-express": "^2.12.0",
+    "express": "^4.17.1",
     "graphql": "14.6.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.4",
     "@types/node": "^13.11.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.8.2",
