--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/federation": "^0.14.0",
     "apollo-server-express": "^2.12.0",
     "express": "^4.17.1",
-    "graphql": "14.6.0"
+    "graphql": "14.6.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.8.2",
