--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/federation": "^0.14.0",
+    "apollo-datasource": "^0.7.0",
+    "apollo-server-caching": "^0.5.1",
     "apollo-server-express": "^2.12.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "graphql": "14.6.0",
-    "lodash": "^4.17.15"
+    "knex": "^0.20.13",
+    "lodash": "^4.17.15",
+    "merge-graphql-schemas": "^1.7.7",
+    "my-sql": "^1.2.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
