--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-datasource": "^0.7.0",
     "apollo-server-caching": "^0.5.1",
     "apollo-server-express": "^2.12.0",
+    "axios": "^0.19.2",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "graphql": "14.6.0",
